--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "OAuth",
   "main": "index.js",
   "scripts": {
-    "test": "OAuth"
+    "start": "nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -18,6 +18,7 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "express-openid-connect": "^2.12.0"
+    "express-openid-connect": "^2.12.0",
+    "nodemon": "^2.0.20"
   }
 }
